feat: add mongo DB, alert add field

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:@localhost:3306/lapbooking"
+MONGODB_URI="mongodb+srv://xfhreall:SL82PxbiH6NM2gqc@xfhreall.ynuhv.mongodb.net/?retryWrites=true&w=majority&appName=xfhreall"
